Fixed sublink bug on mobile

--- a/assets/css/modules/_story.scss
+++ b/assets/css/modules/_story.scss
@@ -188,6 +188,11 @@
 		}
 	}
 
+	.sublink {
+		padding-bottom: $baseline;
+		@include clearfix;
+	}
+
 	// Featured Hero
 
 	&.featured-hero {
